# glsamaker

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .rubocop.yml  .rubocop_todo.yml  .travis.yml  Dockerfile  Dockerfile.dev  Gemfile  Rakefile  TODO  config.ru  docker-compose.override.yml  docker-compose.yml  email.alias  frame-archive.php  frame-body.php  frame-edit.php  frame-fetch.php  frame-left-collapsed.php  frame-left.php  frame-new.php  frame-recent.php  frame-request.php  frame-search.php  frame-stats.graph.php  frame-stats.php  frame-view.php  framed.php  glsamaker.go  go.mod  go.sum  index.php  mypy.ini  package-lock.json  package.json  pylintrc  setup.cfg  spell.data  todo  (+2 more)
config/: application.rb  database.yml.mysql  deploy.rb  environment.rb  environment.rb.rails2  routes.rb  secrets.yml  sphinx.yml
css/: body.css  frames.css  pinstripe.css
db/: schema.rb
doc/: README_FOR_APP
glsamaker/: app.py  autoglsa.py  create_user.py  extensions.py  glsamaker.py  glsarepo.py  main.py  release.py  views.py
includes/: common.auth  common.diff  common.diff.php  common.spell  common.version  io.filegrepper  io.mailer  ui.body  ui.css  ui.css.js  ui.init  ui.newitems  xml.glsaparser
lib/: authentication.rb  authorization.rb  bugzilla.rb  glsamaker.rb  kramdown_ext.rb
public/: 404.html  500.html
script/: config_init  db-backup  update-portage-cache
src/: app.py  create_user.py  db.py  glsa.py  glsamaker.py  release.py  run.py  views.py  website.py
test/: conftest.py  test_autoglsa.py  test_glsarepo.py  test_helper.rb  test_release.py  test_views.py  (+1 more)
(+679 files in other folders)
