[metadata]
name = glsamaker
version = 4.0

[options]
packages =
	glsamaker
	glsamaker.models
install_requires =
	bracex
	bcrypt
	python-bugzilla
	flask
	flask_login
	flask_sqlalchemy
	flask_wtf
	gitpython
	pkgcore
	psycopg2-binary
	sqlalchemy
	wtforms

[options.package_data]
* = templates/*, static/*

[options.extras_require]
test = pytest