[metadata]
name = glsamaker
version = 4.0

[options]
packages =
	glsamaker
	glsamaker.models
install_requires =
	bracex
	bcrypt
	envelope
	flask
	flask_login
	flask_sqlalchemy
	flask_wtf
	gitpython
	python-bugzilla
	# unpin once 0.4.9 is released
	# we need https://github.com/vsajip/python-gnupg/pull/167
	python-gnupg @ git+https://github.com/vsajip/python-gnupg@da9e89b#egg=python-gnupg
	pkgcore
	psycopg2-binary
	sqlalchemy
	wtforms

[options.package_data]
* = templates/*, static/*

[options.extras_require]
test = pytest