[metadata]
name = glsamaker
version = 4.0

[options]
packages =
	glsamaker
	glsamaker.models
install_requires =
	bracex
	bcrypt
	envelope
	flask
	flask_login
	flask_sqlalchemy
	flask_wtf
	gitpython
	python-bugzilla
	python-gnupg
	pkgcore
	psycopg2-binary
	sqlalchemy
	tabulate
	wtforms

[options.package_data]
* = templates/*, static/*

[options.extras_require]
test =
	pytest
type =
	mypy
	types-tabulate
lint =
	black
	colorama
	isort
